# VUTFIT

./: .editorconfig  .gitignore  README.md
1PRVAK/: README.md
1PRVAK/.Zimni/IEL/Projekt/: Ash258.tex
1PRVAK/.Zimni/IUS/: Semestrálka.md
1PRVAK/.Zimni/IUS/Projekt/: IUS.vpp  README.md  xcaber00.tex
1PRVAK/.Zimni/IUS/Semestrálka/: 1 - SWIng.md  2 - Požadavky.md  3 - Modely.md  4 - UML.md  5 - OOP.md  6 - Vzory.md  7 - Testování.md  8 - Právo.md
1PRVAK/.Zimni/IUS/Testy/: 1 - Řádný.md  2 - 1. opravný.md  3 - 2. opravný.md  4 - 3. opravný.md  5 - 4. opravný.md
1PRVAK/.Zimni/IZP/Projekty/3/: CMakeLists.txt  Makefile  README.md  comms.txt  objekty.txt  objektyVojta.txt  proj3.c
1PRVAK/.Zimni/IZP/Testy/: 1 - Půlsemestrálka.md  2 - Řádný.md  3 - 1. opravný.md  4 - Cosi.md  cosi.c
1PRVAK/Letni/INC/Projekt/: README.md  fsm.vhd  zprava.docx
1PRVAK/Letni/INC/Testy/: 1 - Půlsemestrálka.md  2 - Řádný.md  3 - 2. opravný.md
1PRVAK/Letni/IOS/: Demo.md  OS.md
1PRVAK/Letni/IOS/Testy/: 1 - Půlsemestrálka.md  2 - Řádný.md  3 - 1. opravný.md  4 - 2. opravný.md
1PRVAK/Letni/ISJ/Projekty/: docker-compose.yaml
1PRVAK/Letni/ISJ/Testy/: 1 - Půlsemestrálka.md  2 - Semestrálka.md
1PRVAK/Letni/ISU/Testy/: 1 - Půlsemestrálka.md  2 - 2. opravný.md
1PRVAK/Letni/IVS/: 1 - Půlsemestrálka.md
1PRVAK/Letni/IVS/Projekty/1/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CodeCoverage.cmake  Dockerfile  GoogleTest.cmake  README.md  black_box_tests.cpp  docker-compose.yaml  tdd_code.cpp  tdd_code.h  tdd_tests.cpp  white_box_code.cpp  white_box_code.h  white_box_tests.cpp
1PRVAK/Letni/IVS/Projekty/1/Setup/: setup.sh
1PRVAK/Letni/IVS/Projekty/1/libs/: black_box_lib.lib  black_box_lib.lib.vs2010  red_black_tree.h
2DRUHAK/: README.md
2DRUHAK/.Zimni/IAL/Materiály/: 1 - Algoritmický jazyk.md  2 - Abstraktní datový typ - ADT.md  3 - ADT zásobník, pole, fronta, množina, graf.md  BVS.md  Definice.md  Fronta.md  Seznam.md  TRP.md
2DRUHAK/.Zimni/IAL/Projekty/: CMakeLists.txt  docker-compose.yml
2DRUHAK/.Zimni/IAL/Testy/: 1 - Půlsemestrálka.md  2 - Řádný.md  3 - 1. opravný.md  4 - 2. opravný.md  Příprava.url
2DRUHAK/.Zimni/IFJ/: Semestrálka.md
2DRUHAK/.Zimni/IFJ/Projekt/: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  docker-compose.yml  prezentace.pptx  rozdeleni  rozsireni
2DRUHAK/.Zimni/IFJ/Testy/: 1 - Půlsemestrálka.md  2 - Řádný.md  Příprava.url
2DRUHAK/.Zimni/INM/: Cvika.md
2DRUHAK/.Zimni/INM/Testy/: 2 - 2. opravný.md
2DRUHAK/.Zimni/INP/Testy/: 1 - Půlsemestrálka.md  2 - Řádný.md  3 - 1. opravný.md  Příprava.url
2DRUHAK/.Zimni/ISS/Projekt/: Makefile  README.md  (+4 more)
(+639 files in other folders)
